--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,9 @@
 language: php
 os: linux
+addons:
+  sonarcloud:
+    organization: "hardyantz-github" # the key of the org you chose at step #3
+    token:
+      secure: dcf9d5fb7d1ac70ac97b8bc8428e17af4b3d5c2c # encrypted value of your token
+script:
+  - sonar-scanner
