--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ jdk:
   - oraclejdk8
 script:
   - sonar-scanner
+  - pear install pear/PHP_CodeSniffer
 cache:
   directories:
     - '$HOME/.sonar/cache'
