--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,5 @@
-sonar.projectKey=com.sonarqube.examples.standard-sqscanner-travis-project
-sonar.projectName=Standard SQ-Scanner-based project analyzed on SonarCloud using Travis
-sonar.projectVersion=1.0-SNAPSHOT
+sonar.projectKey=php-feed-notifier
+sonar.projectName=php-feed-notifier
 
 sonar.links.homepage=https://github.com/hardyantz/php-feed-notifier
 sonar.links.ci=https://travis-ci.org/hardyantz/php-feed-notifier
