--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=php-feed-notifier
 sonar.projectName=php-feed-notifier
+sonar.source=.
 
 sonar.links.homepage=https://github.com/hardyantz/php-feed-notifier
 sonar.links.ci=https://travis-ci.org/hardyantz/php-feed-notifier
